samples/_failures_safe/1761466345_bcf89d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc430686.c: In function ‘read_token’:
./samples/SAFE/__tmp_bc430686.c:149:9: error: expected expression at end of input
  149 |         token->value[0] =
      |         ^~~~~
./samples/SAFE/__tmp_bc430686.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bc430686.c:149:9: error: expected declaration or statement at end of input
